refactoring css and poking around

--- a/static/less/webapp/styles.less
+++ b/static/less/webapp/styles.less
@@ -1,11 +1,8 @@
-@import "http://fonts.googleapis.com/css?family=Oxygen:400,300";
-@import "http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300";
-@import "http://fonts.googleapis.com/css?family=Roboto:900";
-
-@import "../../src/css/bootstrap-select.css";
+@import (less) "http://fonts.googleapis.com/css?family=Oxygen:400,300";
+@import (less) "http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300";
+@import (less) "http://fonts.googleapis.com/css?family=Roboto:900";
 
 @import "../lib/bootstrap/bootstrap.less";
-//@import "../lib/typeahead.less";
 @import "../lib/datepicker3.less";
 @import "../lib/bootstrap-tour.less";
 @import "../datepicker-override.less";
@@ -33,7 +30,6 @@ html, body, .container, .row {
 
 #ng-app > .container {
     height: calc(~"100% - "(@navbar-height + 1px));
-
 }
 
 body {
