--- a/static/less/landing/landing.less
+++ b/static/less/landing/landing.less
@@ -1,10 +1,10 @@
+@import (less) "http://fonts.googleapis.com/css?family=Oxygen:400,300";
+@import (less) "http://fonts.googleapis.com/css?family=Roboto:500";
+@import (less) "http://fonts.googleapis.com/css?family=Roboto+Slab:700";
+@import (less) "http://fonts.googleapis.com/css?family=Open+Sans:600,700";
+
 @import "../lib/bootstrap/bootstrap.less";
 @import "../variables.less";
-
-@import "http://fonts.googleapis.com/css?family=Oxygen:400,300";
-@import "http://fonts.googleapis.com/css?family=Roboto:500";
-@import "http://fonts.googleapis.com/css?family=Roboto+Slab:700";
-@import "http://fonts.googleapis.com/css?family=Open+Sans:600,700";
 
 body {
     background: @white;
