configurations for the transaction list

--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -85,6 +85,7 @@
             <script src="{{lib}}min/angular-resource.min.js"></script>
             <script src="{{lib}}min/angular-animate.min.js"></script>
             <script src="{{lib}}min/angular-ui-router.min.js"></script>
+            <script src="{{lib}}min/store.min.js"></script>
             <script src="{{lib}}modal.js"></script>
             <script src="{{lib}}dimensions.js"></script>
             <script src="{{lib}}highcharts.src.js"></script>
