--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -87,13 +87,14 @@
                     <h4 class="panel-title">
                         <a ng-bind="group.name"></a>
 
-                        <div style="
-                            background-image: url('/static/img/sprites/foo.png');
-                            background-repeat: no-repeat;
-                            background-position-y: -180px;
-                            width: 20px; height: 20px;
-                            margin-left: 10px;
-                            display: inline-block">&nbsp;</div>
+                        <span ng-controller="ThresholdCtrl">
+                            <div
+                                class="threshold-indicator"
+
+                                ng-class="style_threshold_completion(group)">
+                                &nbsp;
+                            </div>
+                        </span>
 
                         <span class="group-total pull-right" ng-bind="group.total | currency" is-positive-class="group.total"></span>
                     </h4>
@@ -239,3 +240,18 @@
 
 </div>
 
+<script type="text/ng-template" id="popover/popover.tpl.html">
+    <div class="popover">
+      <div class="arrow"></div>
+      <h3 class="popover-title" ng-bind="title" ng-show="title"></h3>
+      <div class="popover-content" ng-bind="content"></div>
+    </div>
+</script>
+
+
+<script type="text/ng-template" id="threshold/popover_content.tpl.html">
+    <span>
+        <p>foo</p>
+        <p>{{name}}</p>
+    </span>
+</script>
