threshold popover content

--- a/static/less/webapp/transaction-list.less
+++ b/static/less/webapp/transaction-list.less
@@ -178,6 +178,10 @@ table.transaction-table {
     display: inline-block;
 }
 
+.threshold-indicator-none {
+    // TODO
+}
+
 @total: 10;
 
 .loopingClassThreshold (@index) when (@index > 0) {
