underline on transaction list hover

--- a/static/less/webapp/transaction-list.less
+++ b/static/less/webapp/transaction-list.less
@@ -94,6 +94,10 @@ table.transaction-table {
     tr.transaction-row {
         cursor: pointer;
 
+        &:hover {
+            text-decoration: underline;
+        }
+
         td {
             border: 0;
 
