squeezing landing page css

--- a/static/less/landing/landing.less
+++ b/static/less/landing/landing.less
@@ -3,7 +3,8 @@
 @import (less) "http://fonts.googleapis.com/css?family=Roboto+Slab:700";
 @import (less) "http://fonts.googleapis.com/css?family=Open+Sans:600,700";
 
-@import "../lib/bootstrap/bootstrap.less";
+@import "bootstrap.less";
+//@import "../lib/bootstrap/bootstrap.less";
 @import "../variables.less";
 
 body {
