--- a/static/less/lib/bootstrap/bootstrap.less
+++ b/static/less/lib/bootstrap/bootstrap.less
@@ -14,12 +14,12 @@
 
 // Reset
 @import "normalize.less";
-@import "print.less";
+//@import "print.less";
 
 // Core CSS
 @import "scaffolding.less";
 @import "type.less";
-@import "code.less";
+//@import "code.less";
 @import "grid.less";
 @import "tables.less";
 @import "forms.less";
@@ -33,16 +33,16 @@
 @import "input-groups.less";
 @import "navs.less";
 @import "navbar.less";
-@import "breadcrumbs.less";
-@import "pagination.less";
-@import "pager.less";
+//@import "breadcrumbs.less";
+//@import "pagination.less";
+//@import "pager.less";
 @import "labels.less";
-@import "badges.less";
-@import "jumbotron.less";
+//@import "badges.less";
+//@import "jumbotron.less";
 @import "thumbnails.less";
 @import "alerts.less";
-@import "progress-bars.less";
-@import "media.less";
+//@import "progress-bars.less";
+//@import "media.less";
 @import "list-group.less";
 @import "panels.less";
 @import "wells.less";
@@ -52,7 +52,7 @@
 @import "modals.less";
 @import "tooltip.less";
 @import "popovers.less";
-@import "carousel.less";
+//@import "carousel.less";
 
 // Utility classes
 @import "utilities.less";
