--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -244,7 +244,7 @@
 
 
 <script type="text/ng-template" id="threshold/popover_content.tpl.html">
-    <span ng-if="category.threshold">
+    <span ng-if="state == STATES.FLAT">
         <p> Limite de gastos com <strong>((category.name))</strong> </p>
 
         <p>Foram gastos <strong>((category.threshold.completion|currency))</strong> de <strong>((category.threshold.value|currency))</strong></p>
@@ -253,7 +253,7 @@
         <a href="#" ng-click="startNewEdit()">{% trans "Remover limite" %}</a>
     </span>
 
-    <span ng-if="!category.threshold">
+    <span ng-if="state != STATES.FLAT">
         <form method="post">
             <p ng-if="state == STATES.ALTER"> {% trans "Alteração de limite de gastos" %} </p>
             <p ng-if="state == STATES.NEW"> {% trans "Criar um limite de gastos" %} </p>
