--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -247,7 +247,7 @@
     <span ng-if="state == STATES.FLAT">
         <p> Limite de gastos com <strong>((category.name))</strong> </p>
 
-        <p>Foram gastos <strong>((category.threshold.completion|currency))</strong> de <strong>((category.threshold.value|currency))</strong></p>
+        <p>Foram gastos <strong>((-category.threshold.completion|currency))</strong> de <strong>((category.threshold.value|currency))</strong></p>
         
         <a href="#" ng-click="startEdit()">{% trans "Alterar limite" %}</a>
         <a href="#" ng-click="startNewEdit()">{% trans "Remover limite" %}</a>
