+not-plus-user threshold screen

--- a/static/less/webapp/styles.less
+++ b/static/less/webapp/styles.less
@@ -16,6 +16,7 @@
 @import "charts.less";
 @import "../forms.less";
 @import "transaction-list.less";
+@import "threshold.less";
 @import "reports.less";
 @import "plans.less";
 @import "guide.less";
