--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -244,7 +244,13 @@
 
 
 <script type="text/ng-template" id="threshold/popover_content.tpl.html">
-    <span ng-if="state == STATES.FLAT">
+    <span ng-if="!window.has_subscription" class="threshold-popover-not-plus">
+        <span class="logo">&nbsp;</span>
+        <p>{% trans "Essa é uma funcionalidade <strong>Plus</strong>" %}</p>
+        <a class="btn btn-lg" target="blank" href="/planos">{% trans "Saiba mais" %}</a>
+    </span>
+
+    <span ng-if="window.has_subscription && state == STATES.FLAT">
         <p>{% trans "Limite de gastos com <strong>((category.name))</strong>" %}</p>
 
         <p>{% trans "Foram gastos <strong>((-category.threshold.completion|currency))</strong> de <strong>((category.threshold.value|currency))</strong>" %}</p>
@@ -253,7 +259,7 @@
         <a href="#" ng-click="removeThreshold($event)" class="btn btn-default btn-xs" confirmation-needed="{% trans "Deseja remover este limite de gastos?" %}">{% trans "Remover limite" %}</a>
     </span>
 
-    <span ng-if="state != STATES.FLAT">
+    <span ng-if="window.has_subscription && state != STATES.FLAT">
             <p ng-if="state == STATES.ALTER"> {% trans "Alteração de limite de gastos" %} </p>
             <p ng-if="state == STATES.NEW"> {% trans "Criar um limite de gastos" %} </p>
 
