--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -84,14 +84,14 @@
             <script src="{{ static_path }}angular-strap/dist/modules/dimensions.js"></script>
             <script src="{{ static_path }}bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
             <script src="{{ static_path }}toastr/toastr.js"></script>
+            <script src="{{ static_path }}moment/moment.js"></script>
+            <script src="{{ static_path }}bootstrap-select/bootstrap-select.js"></script>
+            <script src="{{ static_path }}bootstrap-tour/build/js/bootstrap-tour.js"></script>
+            <script src="{{ static_path }}accounting/accounting.js"></script>
 
             <script src="{{lib}}highcharts.src.js"></script>
 
-            <script src="{{lib}}min/moment.min.js"></script>
-            <script src="{{lib}}bootstrap-select.js"></script>
-            <script src="{{lib}}bootstrap-tour.js"></script>
             <script src="{{lib}}min/modernizr.custom.19405.js"></script>
-            <script src="{{lib}}min/accounting.min.js"></script>
 
             <script src="{{locales}}angular-locale_pt-br.js"></script>
             <script src="{{locales}}bootstrap-datepicker.pt-BR.js"></script>
@@ -126,7 +126,7 @@
         <script src="http://code.angularjs.org/1.2.3/angular-animate.min.js"></script>
         {% endcomment %}
 
-        <script src="{{static_path}}js/webapp-scripts.js?rel=1393471379252"></script>
+        <script src="{{static_path}}js/webapp-scripts.js?rel=1393550288092"></script>
 
     {% endif %}
 
