--- a/templates/webapp/user-menu.html
+++ b/templates/webapp/user-menu.html
@@ -3,10 +3,29 @@
     <a class="dropdown-toggle" data-toggle="dropdown">{{ user.name|capfirst }} <i class="fa fa-gears fa-lg"></i></a>
     <ul class="dropdown-menu">
         <li>
-            <a name="change-password" href="{% url "change_password" %}" class="navbar-link">{% trans "Change password" %}</a>
+        {% if user.has_subscription %}
+            <a class="navbar-link" data-toggle="modal" data-target="#plan-info">
+                <i class="fa fa-check fa-fw"></i>
+                {% trans "Plano Plus" %}
+            </a>
+        {% else %}
+            <a class="navbar-link" href="{% url "plans:index" %}">
+                <i class="fa fa-credit-card fa-fw"></i>
+                {% trans "Faça upgrade na sua conta!" %}
+            </a>
+        {% endif %}
         </li>
         <li>
-            <a name="logout" href="{% url "logout" %}" class="navbar-link">{% trans "Logout" %}</a>
+            <a name="change-password" href="{% url "change_password" %}" class="navbar-link">
+                <i class="fa fa-asterisk fa-fw"></i>
+                {% trans "Change password" %}
+            </a>
+        </li>
+        <li>
+            <a name="logout" href="{% url "logout" %}" class="navbar-link">
+                <i class="fa fa-sign-out fa-fw"></i>
+                {% trans "Logout" %}
+            </a>
         </li>
     </ul>
 </li>
