--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -192,7 +192,7 @@
 
 @dropdown-link-color:            @gray-dark;
 @dropdown-link-hover-color:      #fff;
-@dropdown-link-hover-bg:         @dropdown-link-active-bg;
+@dropdown-link-hover-bg:         transparent;
 
 @dropdown-link-disabled-color:   @gray-light;
 
