--- a/templates/plans/plans-index.html
+++ b/templates/plans/plans-index.html
@@ -9,7 +9,7 @@
     <div class="panel panel-default center-panel-large" id="plans">
         <div class="panel-body">
             <p class="lead">{% blocktrans %}
-                Em breve teremos o plano Plus, com funcionalidades avançadas para ajudar você a manter o controle do seu dinheiro!
+                Assine já o plano Plus, com funcionalidades avançadas para ajudar você a manter o controle do seu dinheiro!
             {% endblocktrans %}</p>
 
             <table class="table plans-info">
