starting feedback form

--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -103,6 +103,7 @@
             <script src="{{controllers}}transaction-list-ctrl.js"></script>
             <script src="{{controllers}}reports-ctrl.js"></script>
             <script src="{{controllers}}installment-form-ctrl.js"></script>
+            <script src="{{controllers}}feedback-form-ctrl.js"></script>
 
             <script src="{{app}}services.js"></script>
             <script src="{{app}}modules/charts.js"></script>
