--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -230,6 +230,8 @@
 
     <div class="content-right-column" id="balance-panel">
         {% include "webapp/transactions/month_balance_panel.html" %}
+
+        {% include "webapp/feedback-form.html" %}
     </div>
 
 </div>
