--- a/templates/webapp/feedback-form.html
+++ b/templates/webapp/feedback-form.html
@@ -17,8 +17,13 @@
                   method="POST"
                   class="feedback-form"
                   name="feedbackForm"
-                  ng-submit="sendFeedback()">
+                  ng-submit="sendFeedback()"
+                  ng-init="url='{% url "contact" %}'">
                 {% csrf_token %}
+
+                <input type="hidden" name="name" value="{{ user.name }}" ng-init="formData.name='{{ user.name }}'"/>
+                <input type="hidden" name="email" value="{{ user.email }}" ng-init="formData.email='{{ user.email }}'"/>
+
 
                 <div class="form-group">
                     <textarea
@@ -27,6 +32,7 @@
                         name="message"
                         class="form-control"
                         placeholder="{% trans "Envie sua sugestão!" %}"
+                        ng-model="formData.message"
                         required
                     ></textarea>
                 </div>
