--- a/templates/webapp/feedback-form.html
+++ b/templates/webapp/feedback-form.html
@@ -36,7 +36,7 @@
                     ></textarea>
                 </div>
 
-                <button type="submit" class="btn btn-primary btn-block">
+                <button type="submit" class="btn btn-primary btn-block" ng-disabled="sending">
                     {% trans "Enviar" %} <i class="fa fa-share"></i>
                 </button>
 
